# edrawmind-skills

./: .gitignore  README.md  README_CN.md  build.bat  build.sh  pyproject.toml
scripts/: build.py
skills/edrawmind-mindmap/: SKILL.md  license.txt
skills/edrawmind-mindmap/docs/: api-reference.md  cli-design-guide.md  workflow-draft.md
skills/edrawmind-mindmap/references/: markdown-format.md  style-guide.md  tool-reference.md
skills/edrawmind-mindmap/scripts/: edrawmind_cli.py
